Changes since 4.0.2:

* fixed 2 potential security holes(detected in internal code review).
  Updade is recommended. 
* Textile i18n improvements
* Add a bulk Ban function for comments
* Automatically hide comments when banning an IP
* Fix comments "page by"
* Fix double translated linebreaks in comments.
* Fix nofollow in comments
* Fix preview without textile in certain edge cases
* Seperate hidden comments into unmoderated and spam
* Add bulk changing of comment status (visible, moderated, spam)
* Better error-handling in comments-form when critical fields are missing
  New tag: <txp:comments_error /> (and conditional <txp:if_comments_error >)
  Style-able error-message and form-elements via CSS (class=comments_warn).
* Plugin-Authors: Add callbacks for future spam-plugins [comment.save, comment.form]
* Plugin-Authors: Add getComment() and comment_evaluator for future spam-plugins
* Plugin-Authors: Allow (optionally, transparently) for installing compressed plugins.
* Plugin-Authors: Add window events using addEvent, to allow multiple events loading 
                  at window.onload, useful for admin side plugins.
* Improve mysql5-compatibility
* Add comment edit link to notification emails
* Make comment-time format customizable in tag (mary)
* Add offset-attribute to file_download_list (mary)
* Make older, newer and link_to_home work more consistantly with other nav-tags (mary)
* Fix mailto: links
* Fix tag trace output for enclosing tags
* Update comment_count after import
* Add extra info to the tag trace (SQL queries, conditional tag results, page template and form names)

Changes since 4.0.1:

* Fix a bug in 404 handling on some fastcgi servers
* Fix a bug that prevented file_download_list from working properly
* Fix a redirection bug in the comment form
* Fix occasional category URL i18n problems
* Remove extra trailing slash in some breadcrumb links
* Make articles by author work properly
* Make feed_link support section and category correctly